--- a/notebooks/IS-Data.ipynb
+++ b/notebooks/IS-Data.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "source": [
     "# 数据处理专用\n",
-    "整合数据"
+    "整合数据,包含了所有处理的数据,用于对联合分布进行探索性分析和错误排查\n",
+    "000985.SH为沪深全A"
    ],
    "metadata": {
     "collapsed": false
@@ -198,6 +199,26 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "trade_date           object\nts_code              object\nCON_YEAR             uint32\nCON_OR              float64\nCON_NP              float64\n                     ...   \nSENT_INDEX_R        float64\nSENT_INDEX_EX       float64\nSENT_INDEX_DEX      float64\nSENT_INDEX_R_EX     float64\nSENT_INDEX_R_DEX    float64\nLength: 70, dtype: object"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merge.dtypes"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# @formatter:off"
@@ -208,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -216,6 +237,17 @@
      "text": [
       "\n",
       ". /*{*/\n",
+      ". \n",
+      ". //模型设定\n",
+      ". encode ts_code,gen(id)\n",
+      "\n",
+      ". tsset time\n",
+      "\n",
+      "Time variable: time, 1 to 1944\n",
+      "        Delta: 1 unit\n",
+      "\n",
+      ". \n",
+      ". //描述性统计\n",
       ". sum\n",
       "\n",
       "    Variable |        Obs        Mean    Std. dev.       Min        Max\n",
@@ -303,9 +335,60 @@
       "SENT_I~X_DEX |      1,944     .129532    .6958647  -.7988879   1.629092\n",
       "SENT_IN~R_EX |      1,944    .0812574    .7666776  -1.083049   2.099405\n",
       "SENT_I~R_DEX |      1,944    .0539826    .7268505  -.8474488   1.663493\n",
+      "-------------+---------------------------------------------------------\n",
+      "          id |      1,944           1           0          1          1\n",
       "\n",
       ". \n",
-      ". //模型设定\n",
+      ". //缩尾\n",
+      ". winsor2 close_chg img_neg, cut(1 99) by(id) label\n",
+      "\n",
+      ". \n",
+      ". //\n",
+      ". reg close_chg l(1/5).img_neg,r\n",
+      "\n",
+      "Linear regression                               Number of obs     =      1,939\n",
+      "                                                F(5, 1933)        =       2.03\n",
+      "                                                Prob > F          =     0.0717\n",
+      "                                                R-squared         =     0.0056\n",
+      "                                                Root MSE          =     1.4965\n",
+      "\n",
+      "------------------------------------------------------------------------------\n",
+      "             |               Robust\n",
+      "   close_chg | Coefficient  std. err.      t    P>|t|     [95% conf. interval]\n",
+      "-------------+----------------------------------------------------------------\n",
+      "     img_neg |\n",
+      "         L1. |   -.587573   .2639105    -2.23   0.026    -1.105152   -.0699938\n",
+      "         L2. |   .0676059   .2500916     0.27   0.787    -.4228717    .5580836\n",
+      "         L3. |    .083629   .2421297     0.35   0.730    -.3912339    .5584919\n",
+      "         L4. |   .0915707   .2479644     0.37   0.712     -.394735    .5778765\n",
+      "         L5. |  -.5049129   .2489994    -2.03   0.043    -.9932485   -.0165772\n",
+      "             |\n",
+      "       _cons |   .2188885   .1055242     2.07   0.038     .0119353    .4258417\n",
+      "------------------------------------------------------------------------------\n",
+      "\n",
+      ". \n",
+      ". reg close_chg l(1/5).tex_neg,r\n",
+      "\n",
+      "Linear regression                               Number of obs     =      1,939\n",
+      "                                                F(5, 1933)        =       0.90\n",
+      "                                                Prob > F          =     0.4819\n",
+      "                                                R-squared         =     0.0029\n",
+      "                                                Root MSE          =     1.4985\n",
+      "\n",
+      "------------------------------------------------------------------------------\n",
+      "             |               Robust\n",
+      "   close_chg | Coefficient  std. err.      t    P>|t|     [95% conf. interval]\n",
+      "-------------+----------------------------------------------------------------\n",
+      "     tex_neg |\n",
+      "         L1. |   .1750246   .2176086     0.80   0.421    -.2517477    .6017969\n",
+      "         L2. |  -.1352457   .2210278    -0.61   0.541    -.5687237    .2982322\n",
+      "         L3. |   -.306369   .2273341    -1.35   0.178    -.7522147    .1394768\n",
+      "         L4. |  -.3031042   .2353356    -1.29   0.198    -.7646425    .1584342\n",
+      "         L5. |  -.0847285   .2409044    -0.35   0.725    -.5571882    .3877312\n",
+      "             |\n",
+      "       _cons |   .1779156   .1022541     1.74   0.082    -.0226243    .3784555\n",
+      "------------------------------------------------------------------------------\n",
+      "\n",
       ". \n",
       ". \n"
      ]
@@ -314,12 +397,21 @@
    "source": [
     "%%stata -d df_merge -force\n",
     "/*{*/\n",
-    "sum\n",
     "\n",
     "//模型设定\n",
+    "encode ts_code,gen(id)\n",
+    "tsset time\n",
     "\n",
-    "//回归分析\n",
-    "reg"
+    "//描述性统计\n",
+    "sum\n",
+    "\n",
+    "//缩尾\n",
+    "winsor2 close_chg img_neg, cut(1 99) by(id) label\n",
+    "\n",
+    "//\n",
+    "reg close_chg l(1/5).img_neg,r\n",
+    "\n",
+    "reg close_chg l(1/5).tex_neg,r\n"
    ],
    "metadata": {
     "collapsed": false
