--- a/notebooks/IS-TrainCNN.ipynb
+++ b/notebooks/IS-TrainCNN.ipynb
@@ -8,18 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
-   }
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,7 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "execution": {
@@ -47,7 +44,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-01-16 16:04:27.151982: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
+      "2023-02-26 11:43:42.371250: I tensorflow/core/util/util.cc:169] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n"
      ]
     }
    ],
@@ -60,7 +57,6 @@
     "from keras.preprocessing import image\n",
     "from keras.models import Model, load_model\n",
     "from keras.layers import Dense, GlobalAveragePooling2D, Dropout\n",
-    "\n",
     "from keras.optimizers import *\n",
     "from keras.losses import categorical_crossentropy\n",
     "\n",
@@ -82,7 +78,6 @@
     "# 回调\n",
     "from keras.callbacks import TensorBoard, ModelCheckpoint, EarlyStopping, ReduceLROnPlateau\n",
     "\n",
-    "# 混合精度\n",
     "# from tensorflow.keras import mixed_precision"
    ]
   },
@@ -95,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "execution": {
@@ -119,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "execution": {
@@ -156,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "execution": {
@@ -188,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "execution": {
@@ -202,17 +197,7 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 617 images belonging to 2 classes.\n",
-      "Found 176 images belonging to 2 classes.\n",
-      "Found 89 images belonging to 2 classes.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 训练集\n",
     "train_datagen = ImageDataGenerator(\n",
@@ -256,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "execution": {
@@ -267,17 +252,7 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Launching TensorBoard..."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 输出日志\n",
     "LOG_DIR = OUT_LOG_PATH + 'hparam_tuning/' + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\") + '/'\n",
@@ -292,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -388,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -428,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -442,30 +417,13 @@
     "# read_model = load_model(BEST_TRAINACC_MODEL)\n",
     "# read_model.evaluate(test_generator)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# 2 0.7977527976036072\n",
-    "#4 0.8089\n",
-    "#6 0.82\n",
-    "#"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "TensorFlow",
+   "name": "pytorch",
    "language": "python",
-   "name": "tensorflow"
+   "display_name": "Rapids"
   },
   "language_info": {
    "codemirror_mode": {
