--- a/notebooks/IS-Data.ipynb
+++ b/notebooks/IS-Data.ipynb
@@ -407,7 +407,7 @@
     "//缩尾\n",
     "winsor2 close_chg img_neg, cut(1 99) by(id) label\n",
     "\n",
-    "//\n",
+    "//ERA\n",
     "reg close_chg l(1/5).img_neg,r\n",
     "\n",
     "reg close_chg l(1/5).tex_neg,r\n"
