--- a/notebooks/IS-Media.ipynb
+++ b/notebooks/IS-Media.ipynb
@@ -645,36 +645,57 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def cal_return(df, ma):\n",
-    "    df[f'img_neg_m{ma}'] = (df['img_neg'].rolling(ma).mean())\n",
+    "def ma_strategy(df, factor_list, window_list):\n",
+    "    \"\"\"\n",
+    "    用均值策略作为买入卖出信号\n",
+    "    :param df: 因子数据\n",
+    "    :param factor_list: 待选决策因子\n",
+    "    :param window_list: 待选决策窗口\n",
+    "    :return:\n",
+    "    \"\"\"\n",
+    "    out_list = []\n",
+    "    # 循环因子和窗口\n",
+    "    for w in window_list:\n",
+    "        for f in factor_list:\n",
+    "            # MA均值计算\n",
+    "            df[f'{f}_ma_{w}'] = (df['img_neg'].rolling(w).mean())\n",
     "\n",
-    "    # 历史均值K\n",
-    "    df['sell_signal'] = df['img_neg'] >= df[f'img_neg_m{ma}']\n",
-    "    df['sell_signal'] = df['sell_signal'].shift(1)\n",
+    "            # 形成投资信号\n",
+    "            df[f'{f}_sell_signal_ma_{w}'] = df[f] >= df[f'{f}_ma_{w}']\n",
+    "            df[f'{f}_sell_signal_ma_{w}'] = df[f'{f}_sell_signal_ma_{w}'].shift(1)  # 向前移动一天,使用历史信息\n",
     "\n",
-    "    # 高于均值投资\n",
-    "    df['img_return'] = np.where(df['sell_signal'], -1*(df['sell_signal']*df['HIGH']), df['shareindex_return'])\n",
+    "            # 卖空指数操作\n",
+    "            df[f'{f}_return_ma_{w}'] = np.where(df[f'{f}_sell_signal_ma_{w}'], -1 * (df[f'{f}_sell_signal_ma_{w}'] * df['close_chg']),\n",
+    "                                                df['close_chg'])\n",
     "\n",
-    "    # 去掉空行\n",
+    "            # 计算累积市值\n",
+    "            df[f'{f}_mv_ma_{w}'] = ((df[f'{f}_return_ma_{w}'] + 100) / 100).cumprod(axis=0)\n",
+    "\n",
+    "            # 计算最大回撤\n",
+    "            df[f'{f}_mdd_ma_{w}'] = df[f'{f}_return_ma_{w}'].cummin(axis=0)\n",
+    "\n",
+    "            # 计算夏普比率\n",
+    "            df[f'{f}_sharp_ma_{w}'] = (df[f'{f}_return_ma_{w}'].mean()) / df[f'{f}_return_ma_{w}'].std(ddof=0) * np.sqrt(250)\n",
+    "\n",
+    "            # 卡玛比率\n",
+    "            df[f'{f}_kama_ma_{w}'] = (df[f'{f}_return_ma_{w}'].mean() * 250) / (df[f'{f}_mdd_ma_{w}'].min())\n",
+    "\n",
+    "            # 输出值列表\n",
+    "            out_list += [f'{f}_mv_ma_{w}', f'{f}_mdd_ma_{w}', f'{f}_sharp_ma_{w}', f'{f}_kama_ma_{w}']\n",
+    "\n",
+    "    # 去掉空行(MA行)\n",
     "    df.dropna(axis=0, inplace=True)\n",
     "\n",
-    "    # 换算\n",
-    "    df['mv_shareindex'] = ((df['shareindex_return'] + 100)/100)\n",
-    "    df['mv_img'] = ((df['img_return'] + 100)/100)\n",
-    "    df['mv_shareindex'] = df['mv_shareindex'].cumprod(axis=0)\n",
-    "    df['mv_img'] = df['mv_img'].cumprod(axis=0)\n",
+    "    # 对比基准\n",
+    "    df['mv_shareindex'] = ((df['close_chg'] + 100) / 100).cumprod(axis=0)\n",
+    "    df['mdd_shareindex'] = df['close_chg'].cummin(axis=0)\n",
+    "    df['sharp_shareindex'] = (df['close_chg'].mean()) / df['close_chg'].std(ddof=0) * np.sqrt(250)\n",
     "\n",
-    "    return df.rename(columns={'mv_img': f'mv_img_{ma}'})\n",
+    "    return df[['trade_date', 'ts_code', 'mv_shareindex', 'mdd_shareindex', 'sharp_shareindex'] + out_list]\n",
     "\n",
     "\n",
-    "def start():\n",
-    "    df_in = df_series\n",
-    "    for i in [5, ]:\n",
-    "        df_in = cal_return(df_in, i)\n",
-    "\n",
-    "    return df_in\n",
-    "\n",
-    "# start()"
+    "#ma策略\n",
+    "ma_strategy(df_data, ['img_neg', 'tex_neg', 'SENT_INDEX', 'SENT_INDEX_R'], [5, 10, 15, 20])\n"
    ],
    "metadata": {
     "collapsed": false
