--- a/notebooks/IS-Data.ipynb
+++ b/notebooks/IS-Data.ipynb
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 83,
    "outputs": [
     {
      "name": "stdout",
@@ -409,40 +409,41 @@
       ". gen byte in_test = (date >= 1944*0.8)\n",
       "\n",
       ". \n",
-      ". //使用训练集进行线性回归建模\n",
-      ". reg close_chg l.img_neg  if in_train\n",
-      "\n",
-      "      Source |       SS           df       MS      Number of obs   =     1,554\n",
-      "-------------+----------------------------------   F(1, 1552)      =      4.06\n",
-      "       Model |  10.0531181         1  10.0531181   Prob > F        =    0.0440\n",
-      "    Residual |  3839.95823     1,552  2.47419989   R-squared       =    0.0026\n",
-      "-------------+----------------------------------   Adj R-squared   =    0.0020\n",
-      "       Total |  3850.01135     1,553  2.47908007   Root MSE        =     1.573\n",
-      "\n",
-      "------------------------------------------------------------------------------\n",
-      "   close_chg | Coefficient  Std. err.      t    P>|t|     [95% conf. interval]\n",
-      "-------------+----------------------------------------------------------------\n",
-      "     img_neg |\n",
-      "         L1. |  -.5188889   .2574195    -2.02   0.044    -1.023816   -.0139622\n",
-      "             |\n",
-      "       _cons |   .1376719   .0629489     2.19   0.029      .014198    .2611457\n",
-      "------------------------------------------------------------------------------\n",
+      ". //定义待对比的指标\n",
+      ". local independent_vars \"img_neg tex_neg SENT_INDEX_R_EX opt_profit\"\n",
       "\n",
       ". \n",
-      ". //进行样本外预测\n",
-      ". predict pred_close if in_test, xb\n",
+      ". //循环\n",
+      ". foreach var of local independent_vars{\n",
+      "  2.         //使用训练集进行线性回归建模\n",
+      ".         qui: reg close_chg l.`var' if in_train\n",
+      "  3. \n",
+      ".         //进行样本外预测,线性预测值\n",
+      ".         predict pred_`var' if in_test, xb\n",
+      "  4. \n",
+      ".         //计算预测误差\n",
+      ".         ge error_`var' = close_chg - pred_`var' if in_test\n",
+      "  5. \n",
+      ".         //计算 Mean Squared Prediction Error\n",
+      ".         egen mspe_`var' = mean(error^2) if in_test\n",
+      "  6. \n",
+      ".         // 清理临时变量\n",
+      ".         drop pred_`var' error_`var'\n",
+      "  7. }\n",
+      "(1,555 missing values generated)\n",
+      "(1,555 missing values generated)\n",
+      "(1,555 missing values generated)\n",
+      "(1,555 missing values generated)\n",
+      "(1,555 missing values generated)\n",
+      "(1,555 missing values generated)\n",
+      "(1,555 missing values generated)\n",
+      "(1,555 missing values generated)\n",
+      "(1,555 missing values generated)\n",
+      "(1,555 missing values generated)\n",
+      "(1,555 missing values generated)\n",
       "(1,555 missing values generated)\n",
       "\n",
       ". \n",
-      ". //计算预测误差\n",
-      ". ge error = close_chg - pred_close if in_test\n",
-      "(1,555 missing values generated)\n",
-      "\n",
-      ". \n",
-      ". //计算 Mean Squared Prediction Error\n",
-      ". egen mspe = mean(error^2) if in_test\n",
-      "(1,555 missing values generated)\n",
-      "\n",
       ". \n",
       ". \n"
      ]
@@ -460,49 +461,68 @@
     "gen byte in_train = (date < 1944*0.8)\n",
     "gen byte in_test = (date >= 1944*0.8)\n",
     "\n",
-    "//使用训练集进行线性回归建模\n",
-    "reg close_chg l.img_neg  if in_train\n",
+    "//定义待对比的指标\n",
+    "local independent_vars \"img_neg tex_neg SENT_INDEX_R_EX opt_profit\"\n",
     "\n",
-    "//进行样本外预测\n",
-    "predict pred_close if in_test, xb\n",
+    "//循环\n",
+    "foreach var of local independent_vars{\n",
+    "        //使用训练集进行线性回归建模 滞后1期\n",
+    "        qui: reg close_chg l.`var' if in_train\n",
     "\n",
-    "//计算预测误差\n",
-    "ge error = close_chg - pred_close if in_test\n",
+    "        //进行样本外预测,线性预测值\n",
+    "        predict pred_`var' if in_test, xb\n",
     "\n",
-    "//计算 Mean Squared Prediction Error\n",
-    "egen mspe = mean(error^2) if in_test\n"
+    "        //计算预测误差\n",
+    "        ge error_`var' = close_chg - pred_`var' if in_test\n",
+    "\n",
+    "        //计算 Mean Squared Prediction Error\n",
+    "        egen mspe_`var' = mean(error^2) if in_test\n",
+    "\n",
+    "        // 清理临时变量\n",
+    "        drop pred_`var' error_`var'\n",
+    "}\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-12T20:45:39.674391Z",
-     "end_time": "2023-04-12T20:45:39.857074Z"
+     "start_time": "2023-04-12T20:54:53.111773Z",
+     "end_time": "2023-04-12T20:54:53.310664Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 84,
    "outputs": [
     {
      "data": {
-      "text/plain": "     trade_date    ts_code  CON_YEAR        CON_OR        CON_NP  CON_EPS  \\\n0      20140102  000985.SH      2014  3.034892e+09  27421.678403   0.6857   \n1      20140103  000985.SH      2014  3.033876e+09  27421.601209   0.6857   \n2      20140106  000985.SH      2014  3.033345e+09  27412.012060   0.6854   \n3      20140107  000985.SH      2014  3.028546e+09  27384.608096   0.6846   \n4      20140108  000985.SH      2014  3.028892e+09  27355.547003   0.6838   \n...         ...        ...       ...           ...           ...      ...   \n1939   20211227  000985.SH      2021  6.389869e+09  53799.927579   0.7131   \n1940   20211228  000985.SH      2021  6.391559e+09  53788.880275   0.7129   \n1941   20211229  000985.SH      2021  6.389955e+09  53725.674838   0.7120   \n1942   20211230  000985.SH      2021  6.390729e+09  53695.625032   0.7116   \n1943   20211231  000985.SH      2021  6.389440e+09  53655.694957   0.7111   \n\n            CON_NA  CON_PB  CON_PS   CON_PE  ...  SENT_INDEX_EX  \\\n0     2.017385e+09  1.3334  0.8863   9.8095  ...      -0.571980   \n1     2.017584e+09  1.3213  0.8787   9.7214  ...      -0.598652   \n2     2.027389e+09  1.2895  0.8619   9.5373  ...      -0.623006   \n3     2.027386e+09  1.2917  0.8647   9.5629  ...      -0.644795   \n4     2.028490e+09  1.2935  0.8663   9.5920  ...      -0.664723   \n...            ...     ...     ...      ...  ...            ...   \n1939  5.236956e+09  1.7835  1.4617  17.3613  ...       1.170102   \n1940  5.237495e+09  1.7933  1.4695  17.4615  ...       1.127746   \n1941  5.237052e+09  1.7779  1.4571  17.3305  ...       1.149856   \n1942  5.236812e+09  1.7905  1.4672  17.4624  ...       1.079838   \n1943  5.237010e+09  1.7997  1.4751  17.5661  ...       1.088991   \n\n      SENT_INDEX_DEX  SENT_INDEX_R_EX  SENT_INDEX_R_DEX    date  in_train  \\\n0          -0.588495        -0.435412         -0.451046     1.0         1   \n1          -0.588830        -0.502679         -0.452930     2.0         1   \n2          -0.589509        -0.563137         -0.455863     3.0         1   \n3          -0.590505        -0.617575         -0.459753     4.0         1   \n4          -0.591815        -0.666961         -0.464538     5.0         1   \n...              ...              ...               ...     ...       ...   \n1939        1.302731         0.960139          1.050876  1940.0         0   \n1940        1.298598         0.909492          1.046500  1941.0         0   \n1941        1.293518         0.934144          1.040757  1942.0         0   \n1942        1.288670         0.852272          1.035358  1943.0         0   \n1943        1.283711         0.862929          1.029868  1944.0         0   \n\n      in_test     pred_close          error           mspe  \n0           0  8.988466e+307  8.988466e+307  8.988466e+307  \n1           0  8.988466e+307  8.988466e+307  8.988466e+307  \n2           0  8.988466e+307  8.988466e+307  8.988466e+307  \n3           0  8.988466e+307  8.988466e+307  8.988466e+307  \n4           0  8.988466e+307  8.988466e+307  8.988466e+307  \n...       ...            ...            ...            ...  \n1939        1   5.983854e-02  -5.103013e-02   1.306321e+00  \n1940        1   2.334042e-02   6.932319e-01   1.306321e+00  \n1941        1   1.129629e-01  -1.023962e+00   1.306321e+00  \n1942        1   7.949651e-03   8.410221e-01   1.306321e+00  \n1943        1  -6.411831e-02   6.458642e-01   1.306321e+00  \n\n[1944 rows x 76 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>trade_date</th>\n      <th>ts_code</th>\n      <th>CON_YEAR</th>\n      <th>CON_OR</th>\n      <th>CON_NP</th>\n      <th>CON_EPS</th>\n      <th>CON_NA</th>\n      <th>CON_PB</th>\n      <th>CON_PS</th>\n      <th>CON_PE</th>\n      <th>...</th>\n      <th>SENT_INDEX_EX</th>\n      <th>SENT_INDEX_DEX</th>\n      <th>SENT_INDEX_R_EX</th>\n      <th>SENT_INDEX_R_DEX</th>\n      <th>date</th>\n      <th>in_train</th>\n      <th>in_test</th>\n      <th>pred_close</th>\n      <th>error</th>\n      <th>mspe</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>20140102</td>\n      <td>000985.SH</td>\n      <td>2014</td>\n      <td>3.034892e+09</td>\n      <td>27421.678403</td>\n      <td>0.6857</td>\n      <td>2.017385e+09</td>\n      <td>1.3334</td>\n      <td>0.8863</td>\n      <td>9.8095</td>\n      <td>...</td>\n      <td>-0.571980</td>\n      <td>-0.588495</td>\n      <td>-0.435412</td>\n      <td>-0.451046</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>20140103</td>\n      <td>000985.SH</td>\n      <td>2014</td>\n      <td>3.033876e+09</td>\n      <td>27421.601209</td>\n      <td>0.6857</td>\n      <td>2.017584e+09</td>\n      <td>1.3213</td>\n      <td>0.8787</td>\n      <td>9.7214</td>\n      <td>...</td>\n      <td>-0.598652</td>\n      <td>-0.588830</td>\n      <td>-0.502679</td>\n      <td>-0.452930</td>\n      <td>2.0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>20140106</td>\n      <td>000985.SH</td>\n      <td>2014</td>\n      <td>3.033345e+09</td>\n      <td>27412.012060</td>\n      <td>0.6854</td>\n      <td>2.027389e+09</td>\n      <td>1.2895</td>\n      <td>0.8619</td>\n      <td>9.5373</td>\n      <td>...</td>\n      <td>-0.623006</td>\n      <td>-0.589509</td>\n      <td>-0.563137</td>\n      <td>-0.455863</td>\n      <td>3.0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>20140107</td>\n      <td>000985.SH</td>\n      <td>2014</td>\n      <td>3.028546e+09</td>\n      <td>27384.608096</td>\n      <td>0.6846</td>\n      <td>2.027386e+09</td>\n      <td>1.2917</td>\n      <td>0.8647</td>\n      <td>9.5629</td>\n      <td>...</td>\n      <td>-0.644795</td>\n      <td>-0.590505</td>\n      <td>-0.617575</td>\n      <td>-0.459753</td>\n      <td>4.0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>20140108</td>\n      <td>000985.SH</td>\n      <td>2014</td>\n      <td>3.028892e+09</td>\n      <td>27355.547003</td>\n      <td>0.6838</td>\n      <td>2.028490e+09</td>\n      <td>1.2935</td>\n      <td>0.8663</td>\n      <td>9.5920</td>\n      <td>...</td>\n      <td>-0.664723</td>\n      <td>-0.591815</td>\n      <td>-0.666961</td>\n      <td>-0.464538</td>\n      <td>5.0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1939</th>\n      <td>20211227</td>\n      <td>000985.SH</td>\n      <td>2021</td>\n      <td>6.389869e+09</td>\n      <td>53799.927579</td>\n      <td>0.7131</td>\n      <td>5.236956e+09</td>\n      <td>1.7835</td>\n      <td>1.4617</td>\n      <td>17.3613</td>\n      <td>...</td>\n      <td>1.170102</td>\n      <td>1.302731</td>\n      <td>0.960139</td>\n      <td>1.050876</td>\n      <td>1940.0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>5.983854e-02</td>\n      <td>-5.103013e-02</td>\n      <td>1.306321e+00</td>\n    </tr>\n    <tr>\n      <th>1940</th>\n      <td>20211228</td>\n      <td>000985.SH</td>\n      <td>2021</td>\n      <td>6.391559e+09</td>\n      <td>53788.880275</td>\n      <td>0.7129</td>\n      <td>5.237495e+09</td>\n      <td>1.7933</td>\n      <td>1.4695</td>\n      <td>17.4615</td>\n      <td>...</td>\n      <td>1.127746</td>\n      <td>1.298598</td>\n      <td>0.909492</td>\n      <td>1.046500</td>\n      <td>1941.0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>2.334042e-02</td>\n      <td>6.932319e-01</td>\n      <td>1.306321e+00</td>\n    </tr>\n    <tr>\n      <th>1941</th>\n      <td>20211229</td>\n      <td>000985.SH</td>\n      <td>2021</td>\n      <td>6.389955e+09</td>\n      <td>53725.674838</td>\n      <td>0.7120</td>\n      <td>5.237052e+09</td>\n      <td>1.7779</td>\n      <td>1.4571</td>\n      <td>17.3305</td>\n      <td>...</td>\n      <td>1.149856</td>\n      <td>1.293518</td>\n      <td>0.934144</td>\n      <td>1.040757</td>\n      <td>1942.0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1.129629e-01</td>\n      <td>-1.023962e+00</td>\n      <td>1.306321e+00</td>\n    </tr>\n    <tr>\n      <th>1942</th>\n      <td>20211230</td>\n      <td>000985.SH</td>\n      <td>2021</td>\n      <td>6.390729e+09</td>\n      <td>53695.625032</td>\n      <td>0.7116</td>\n      <td>5.236812e+09</td>\n      <td>1.7905</td>\n      <td>1.4672</td>\n      <td>17.4624</td>\n      <td>...</td>\n      <td>1.079838</td>\n      <td>1.288670</td>\n      <td>0.852272</td>\n      <td>1.035358</td>\n      <td>1943.0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>7.949651e-03</td>\n      <td>8.410221e-01</td>\n      <td>1.306321e+00</td>\n    </tr>\n    <tr>\n      <th>1943</th>\n      <td>20211231</td>\n      <td>000985.SH</td>\n      <td>2021</td>\n      <td>6.389440e+09</td>\n      <td>53655.694957</td>\n      <td>0.7111</td>\n      <td>5.237010e+09</td>\n      <td>1.7997</td>\n      <td>1.4751</td>\n      <td>17.5661</td>\n      <td>...</td>\n      <td>1.088991</td>\n      <td>1.283711</td>\n      <td>0.862929</td>\n      <td>1.029868</td>\n      <td>1944.0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>-6.411831e-02</td>\n      <td>6.458642e-01</td>\n      <td>1.306321e+00</td>\n    </tr>\n  </tbody>\n</table>\n<p>1944 rows × 76 columns</p>\n</div>"
+      "text/plain": "       mspe_img_neg   mspe_tex_neg  mspe_SENT_INDEX_R_EX  mspe_opt_profit\n0     8.988466e+307  8.988466e+307         8.988466e+307    8.988466e+307\n1     8.988466e+307  8.988466e+307         8.988466e+307    8.988466e+307\n2     8.988466e+307  8.988466e+307         8.988466e+307    8.988466e+307\n3     8.988466e+307  8.988466e+307         8.988466e+307    8.988466e+307\n4     8.988466e+307  8.988466e+307         8.988466e+307    8.988466e+307\n...             ...            ...                   ...              ...\n1939   1.306321e+00   1.315518e+00          1.313430e+00     1.312469e+00\n1940   1.306321e+00   1.315518e+00          1.313430e+00     1.312469e+00\n1941   1.306321e+00   1.315518e+00          1.313430e+00     1.312469e+00\n1942   1.306321e+00   1.315518e+00          1.313430e+00     1.312469e+00\n1943   1.306321e+00   1.315518e+00          1.313430e+00     1.312469e+00\n\n[1944 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mspe_img_neg</th>\n      <th>mspe_tex_neg</th>\n      <th>mspe_SENT_INDEX_R_EX</th>\n      <th>mspe_opt_profit</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n      <td>8.988466e+307</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1939</th>\n      <td>1.306321e+00</td>\n      <td>1.315518e+00</td>\n      <td>1.313430e+00</td>\n      <td>1.312469e+00</td>\n    </tr>\n    <tr>\n      <th>1940</th>\n      <td>1.306321e+00</td>\n      <td>1.315518e+00</td>\n      <td>1.313430e+00</td>\n      <td>1.312469e+00</td>\n    </tr>\n    <tr>\n      <th>1941</th>\n      <td>1.306321e+00</td>\n      <td>1.315518e+00</td>\n      <td>1.313430e+00</td>\n      <td>1.312469e+00</td>\n    </tr>\n    <tr>\n      <th>1942</th>\n      <td>1.306321e+00</td>\n      <td>1.315518e+00</td>\n      <td>1.313430e+00</td>\n      <td>1.312469e+00</td>\n    </tr>\n    <tr>\n      <th>1943</th>\n      <td>1.306321e+00</td>\n      <td>1.315518e+00</td>\n      <td>1.313430e+00</td>\n      <td>1.312469e+00</td>\n    </tr>\n  </tbody>\n</table>\n<p>1944 rows × 4 columns</p>\n</div>"
      },
-     "execution_count": 72,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "DATAFRAME"
+    "DATAFRAME[['mspe_img_neg','mspe_tex_neg','mspe_SENT_INDEX_R_EX','mspe_opt_profit']]"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-12T20:42:05.682222Z",
-     "end_time": "2023-04-12T20:42:05.705837Z"
+     "start_time": "2023-04-12T20:54:55.408394Z",
+     "end_time": "2023-04-12T20:54:55.418207Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
